fix sidebar z-index

--- a/src/styles.css
+++ b/src/styles.css
@@ -345,7 +345,7 @@ h1::after {
   border-right: 1px solid var(--color-red);
   padding: 10px 5px 10px 30px;
   position: sticky;
-  z-index: 3;
+  z-index: 4;
   top: 0;
 }
 .sidebar-inner {
